# ESPs

./: Hits_Summary.html  LICENSE  MANIFEST.in  README.md  Specific_Peptides_Perspective_of_Proteins.docx  setup.cfg
src/: Hits_Summary.csv  Predict_ECs.py  SPs.py  dGPCR_ZFs.json  dGPCRs.json  dZFs.json  requirements.txt
src/ESPs_package/: ESPs.py
src/ESPs_pkg_George_Weingart.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: GPCR_Test.fasta  ZFs_Test.fasta  test.fasta
