[metadata]
name = ESPs_pkg_George_Weingart
version = 0.0.4
author = George Weingart
author_email = george.weingart@gmail.com
description = Prediction of Enzymatic Commission Number (EC) using Enzymatic Specific Peptides
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/ESPs
project_urls =
    Bug Tracker = https://github.com/pypa/ESPs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

 

[options.package_data]
* = *.json